project( SegmentationToGoFigure2 )

SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY
  ${SEGMENTATIONTOGOFIGURE2}/bin
 )

FIND_PACKAGE( VTK )
IF( VTK_FOUND )
  INCLUDE( ${VTK_USE_FILE} )
ENDIF( VTK_FOUND )

FIND_PACKAGE( ITK )
IF( ITK_FOUND )
  INCLUDE( ${ITK_USE_FILE} )
ENDIF( ITK_FOUND )

ADD_SUBDIRECTORY( Source )

